Added prototype child probe resolver using the SBT launcher.
This needs some work/testing, and @havocp 's  fine toothed comb to ensure this is the direction he wanted to head.

It also needs a thorough look-see on windows.

Finally, we have to figure out the Classloader and differing scala version issues.  SBT 0.12 is Scala 2.9 and Play 2.1 is Scala 2.10.